@@ -110,11 +110,11 @@ elsif ($Location_Input && !$Submit_Assignment) {
 		exit(0);
 	}
 	else {
-		my ($IP_Block_Name, $Parent_Block, $Final_Allocated_IP) = &assignment;
+		my ($IP_Block_Name, $Parent_Block, $Final_Assignd_IP) = &assignment;
 		require $Header;
 		&html_output;
 		require $Footer;
-		&html_auto_block ($IP_Block_Name, $Parent_Block, $Final_Allocated_IP);
+		&html_auto_block ($IP_Block_Name, $Parent_Block, $Final_Assignd_IP);
 	}
 }
 elsif ($Submit_Assignment) {
@@ -127,7 +127,7 @@ elsif ($Submit_Assignment) {
 	}
 	else {
 	&add_block;
-		my $Message_Green="$Final_Assignment successfully allocated.";
+		my $Message_Green="$Final_Assignment successfully assigned.";
 		$Session->param('Message_Green', $Message_Green);
 		$Session->flush();
 		print "Location: /IP/ipv4-assignments.cgi\n\n";
@@ -145,7 +145,7 @@ elsif ($Final_Block_Manual && $Location_Input_Manual) {
 	else {
 		$Final_Assignment = $Final_Block_Manual;
 		&add_block;
-		my $Message_Orange="$Final_Assignment successfully allocated manually. No sanity checks were done.";
+		my $Message_Orange="$Final_Assignment successfully assigned manually. No sanity checks were done.";
 		$Session->param('Message_Orange', $Message_Orange);
 		$Session->flush();
 		print "Location: /IP/ipv4-assignments.cgi\n\n";
@@ -430,10 +430,10 @@ print <<ENDHTML;
 <h4 align="center">Block Info</h4>
 ENDHTML
 
-my ($IP_Block_Name, $Parent_Block, $Final_Allocated_IP) = @_;
+my ($IP_Block_Name, $Parent_Block, $Final_Assignd_IP) = @_;
 
 my $Embedded = 1;
-&html_query_block($Final_Allocated_IP, $Parent_Block, $Embedded);
+&html_query_block($Final_Assignd_IP, $Parent_Block, $Embedded);
 
 if ($Add_Host_Temp_New) {
 	if ($Add_Host_Temp_Existing !~ m/^$Add_Host_Temp_New,/g && $Add_Host_Temp_Existing !~ m/,$Add_Host_Temp_New$/g && $Add_Host_Temp_Existing !~ m/,$Add_Host_Temp_New,/g) {
@@ -531,9 +531,9 @@ print <<ENDHTML;
 
 <form action='ipv4-assignments.cgi' method='post'>
 	<input type='hidden' name='Add_Host_Temp_Existing' value='$Add_Host_Temp_Existing'>
-	<input type='hidden' name='Final_Assignment' value='$Final_Allocated_IP'>
+	<input type='hidden' name='Final_Assignment' value='$Final_Assignd_IP'>
 	<input type='hidden' name='Final_Parent' value='$Parent_Block'>
-	<input type='submit' name='Submit_Assignment' value='Allocate Block'>
+	<input type='submit' name='Submit_Assignment' value='Assign Block'>
 </form>
 
 ENDHTML
@@ -609,7 +609,7 @@ sub add_block {
 
 	if ($Final_Block_Manual) {$Final_Block_Manual = ' This was a manual assignment.'} 
 
-	$Audit_Log_Submission->execute("IP", "Add", "$User_Name allocated $Final_Assignment. The system assigned it IPv4 Assignment ID $Block_Insert_ID. $Host_Counter hosts were assigned to the block.$Final_Block_Manual", $User_Name);
+	$Audit_Log_Submission->execute("IP", "Add", "$User_Name assigned $Final_Assignment. The system assigned it IPv4 Assignment ID $Block_Insert_ID. $Host_Counter hosts were assigned to the block.$Final_Block_Manual", $User_Name);
 
 	# / Audit Log
 
@@ -1278,7 +1278,7 @@ print <<ENDHTML;
 								<option value='/23'>/23</option>
 							</select>
 	
-							<input type=submit name='ok' value='Allocate Block'>
+							<input type=submit name='ok' value='Assign Block'>
 						</td>
 					</tr>
 				</table>
