@@ -7,6 +7,7 @@
         - Changed the naming of IP allocations to IP assignments for compatibility with RIPE definitions.
         - Reduced value length from 45 to 18 for IP blocks in assignment DB.
         - Introduced IPv6 assignment system.
+        - Changed snapshot delete CLI tag from -r to -d to reduce the risk of mixing up with -R (restore).
 2.2.1   - Fixed an issue with the IP allocation system reporting the wrong block when full.
         - Removed taint requirement from locally executed only scripts.
         - Fixed missing formatting for variables in Command Sets.
